Fix overflow issue with container and body
When screen was small, the user could not scroll to find content on
the page.  Making the body height 100%, with overflow, then making the
container div min-height 100% fixes the issue and allows for scrolling
when the content does not entirely fit on a small screen.

--- a/a5/css/css.css
+++ b/a5/css/css.css
@@ -1,12 +1,13 @@
 html,
 body {
-    min-height: 100%;
+    height: 100%;
     width: 100%;
     margin: 0;
     font-family: "Lora", serif;
     font-optical-sizing: auto;
     font-weight: 500;
     font-style: normal;
+    overflow-y: auto;
 }
 
 .container {
@@ -15,8 +16,9 @@ body {
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 100%;
+    min-height: 100%;
     gap: 10px;
+    overflow: hidden;
 }
 
 .slideshow_container {
